<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bgdialog"

    android:orientation="vertical" >

    <TextView
        android:id="@+id/del_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/delitem"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_alignParentStart="false" />

    <LinearLayout
        android:orientation="horizontal"

        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="250dp" android:layout_height="wrap_content"
        android:layout_below="@+id/del_tv">

        <Button
            android:id="@+id/del_yes"
            android:layout_width="0.0dip" android:layout_height="fill_parent"
            android:text="@string/yes"
            android:layout_weight="1.0" />

        <Button
            android:id="@+id/del_no"
            android:layout_width="0.0dip" android:layout_height="fill_parent"
            android:text="@string/no"
            android:layout_weight="1.0" />

    </LinearLayout>

</RelativeLayout>